--- a/TinyCap/TinyCap.vcxproj
+++ b/TinyCap/TinyCap.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="appsystem.cpp" />
     <ClCompile Include="scene.cpp" />
     <ClCompile Include="tcmath.cpp" />
+    <ClCompile Include="texture.cpp" />
     <ClCompile Include="textureshader.cpp" />
     <ClCompile Include="util.cpp" />
   </ItemGroup>
@@ -134,6 +135,7 @@
     <ClInclude Include="appsystem.h" />
     <ClInclude Include="scene.h" />
     <ClInclude Include="tcmath.h" />
+    <ClInclude Include="texture.h" />
     <ClInclude Include="textureshader.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
