--- a/TinyCap/TinyCap.vcxproj
+++ b/TinyCap/TinyCap.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="tcmath.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="textureshader.cpp" />
+    <ClCompile Include="timing.cpp" />
     <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +139,7 @@
     <ClInclude Include="tcmath.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="textureshader.h" />
+    <ClInclude Include="timing.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
