--- a/TinyCap/TinyCap.vcxproj.filters
+++ b/TinyCap/TinyCap.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="timing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mf_h264_encoder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="timing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mf_h264_encoder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
